--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Gaurav-Sutar",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^4.12.1",
+    "mongoose": "^6.7.3",
     "mysql2": "^1.6.1",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
