--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.3",
     "mysql2": "^1.6.1",
