--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "express-validator": "^6.14.2",
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^1.6.1",
     "nodemailer": "^6.8.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
     "sequelize": "^5.0.0-beta.11"
   }
